--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -1,6 +1,3 @@
-* {
-}
-
 html,
 body {
   height: 100%;
@@ -10,4 +7,9 @@ body {
   color: #754b4e;
   margin: 0;
   font-size: 62.5%;
+  background-color: #f9e4ea;
+}
+
+a {
+  text-decoration: none;
 }
