--- a/src/components/Navigation/styles.module.scss
+++ b/src/components/Navigation/styles.module.scss
@@ -8,6 +8,7 @@
     background-color: #ea6093;
     position: fixed;
     top: 0;
+    transform: translate3d(0, 0, 0);
     width: 100%;
     z-index: 2;
   }
@@ -91,24 +92,24 @@
     }
   }
 
+  .active:after {
+    background-color: #f9bbd5;
+    border-radius: 10rem;
+    content: '';
+    display: block;
+    position: absolute;
+    bottom: -5px;
+    height: 4px;
+    width: 120%;
+    left: -10%;
+  }
+
   @include hide-phone;
 }
 
 .navWrapper {
   display: flex;
   align-items: center;
-}
-
-.active:after {
-  background-color: #f9bbd5;
-  border-radius: 10rem;
-  content: '';
-  display: block;
-  position: absolute;
-  bottom: -5px;
-  height: 4px;
-  width: 120%;
-  left: -10%;
 }
 
 .cart {
@@ -168,5 +169,63 @@
   @include for-phone-only {
     top: 0.2rem;
     right: -0.1rem;
+  }
+}
+
+.mobileMenu {
+  background-color: #ffd3e3;
+  height: 100%;
+  left: 0;
+  opacity: 0;
+  position: fixed;
+  top: 0;
+  transform: translateX(-100vw);
+  transition: transform 0.4s cubic-bezier(0.87, 0, 0.13, 1),
+    opacity 0.4s cubic-bezier(0.87, 0, 0.13, 1);
+  will-change: transform, opacity;
+  width: 100vw;
+  z-index: 2;
+}
+
+.mobileMenu.active {
+  opacity: 1;
+  transform: translateX(0);
+}
+
+.navigationMobile {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  padding: 11rem 2rem 2rem 2rem;
+
+  a {
+    color: $color-pink;
+    font-family: 'Baloo Bhaina 2', sans-serif;
+    font-size: 3rem;
+    font-weight: 700;
+    line-height: 1;
+    margin-bottom: 2rem;
+    opacity: 0;
+    position: relative;
+    transition: transform 0.4s cubic-bezier(0.87, 0, 0.13, 1),
+      opacity 0.4s cubic-bezier(0.87, 0, 0.13, 1);
+    transform: translateX(-8rem);
+    will-change: color, transform;
+
+    &:hover {
+      color: $color-brown;
+      transform: translate(0, -0.3rem);
+    }
+
+    @for $i from 1 through 3 {
+      &:nth-child(#{$i}) {
+        transition-delay: 0.1s * $i;
+      }
+    }
+
+    .mobileMenu.active & {
+      opacity: 1;
+      transform: translateX(0);
+    }
   }
 }
