--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -1,6 +1,9 @@
 $color-pink: #ea6194;
 $color-brown: #754b4e;
 
+$font-heading: 'Baloo Bhaina 2', sans-serif;
+$font-body: 'Manrope', sans-serif;
+
 $phoneWidth: 823px;
 
 @mixin for-desktop-only {
