--- a/src/components/Navigation/styles.module.scss
+++ b/src/components/Navigation/styles.module.scss
@@ -1,7 +1,7 @@
 @import 'src/assets/scss/variables';
 
 .header {
-  margin-bottom: 40rem;
+  margin-bottom: 10rem;
   position: relative;
 
   @include for-phone-only {
@@ -77,7 +77,7 @@
 
   a {
     color: $color-pink;
-    font-family: 'Baloo Bhaina 2', sans-serif;
+    font-family: $font-heading;
     font-size: 3rem;
     font-weight: 700;
     line-height: 1;
@@ -156,7 +156,7 @@
   box-shadow: -1px 2px 0 #efb9cf;
   color: #754b4e;
   display: flex;
-  font-family: 'Baloo Bhaina 2', sans-serif;
+  font-family: $font-heading;
   font-weight: 700;
   font-size: 1.5rem;
   line-height: 0.7;
@@ -177,6 +177,7 @@
   height: 100%;
   left: 0;
   opacity: 0;
+  overflow: hidden;
   position: fixed;
   top: 0;
   transform: translateX(-100vw);
@@ -200,7 +201,7 @@
 
   a {
     color: $color-pink;
-    font-family: 'Baloo Bhaina 2', sans-serif;
+    font-family: $font-heading;
     font-size: 3rem;
     font-weight: 700;
     line-height: 1;
@@ -227,5 +228,18 @@
       opacity: 1;
       transform: translateX(0);
     }
+  }
+}
+.whale {
+  bottom: -5rem;
+  left: 50%;
+  position: absolute;
+  transform: translate(10%, 40rem);
+  width: 60%;
+  transition: transform 0.6s cubic-bezier(0.87, 0, 0.13, 1);
+  will-change: transform;
+
+  .mobileMenu.active & {
+    transform: translate(10%, 0);
   }
 }
