--- a/src/components/Product/ProductGrid/styles.module.scss
+++ b/src/components/Product/ProductGrid/styles.module.scss
@@ -1,32 +1,34 @@
-.Grid {
+.grid {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   gap: 2.5rem;
 
-  @media (max-width: 700px) {
+  @media (max-width: 980px) {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  @media (max-width: 750px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  @media (max-width: 530px) {
     grid-template-columns: repeat(1, 1fr);
   }
 }
 
-.Product {
+.product {
   display: flex;
   min-height: 100%;
   flex-direction: column;
 }
 
-.Title {
+.title {
   font-weight: 300;
   font-size: 1.2rem;
   text-align: center;
 }
 
-.PriceTag {
+.price {
   font-weight: 300;
   font-size: 1rem;
   text-align: center;
   margin-top: 15px;
-
-  :before {
-    content: '- ';
-  }
 }
