--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -12,3 +12,11 @@ body {
 a {
   text-decoration: none;
 }
+
+input,
+textarea,
+button,
+select,
+a {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
