--- a/src/components/Navigation/styles.module.scss
+++ b/src/components/Navigation/styles.module.scss
@@ -176,20 +176,17 @@
   background-color: #ffd3e3;
   height: 100%;
   left: 0;
-  opacity: 0;
   overflow: hidden;
   position: fixed;
   top: 0;
   transform: translateX(-100vw);
-  transition: transform 0.4s cubic-bezier(0.87, 0, 0.13, 1),
-    opacity 0.4s cubic-bezier(0.87, 0, 0.13, 1);
-  will-change: transform, opacity;
+  transition: transform 0.4s cubic-bezier(0.87, 0, 0.13, 1);
+  will-change: transform;
   width: 100vw;
   z-index: 2;
 }
 
 .mobileMenu.active {
-  opacity: 1;
   transform: translateX(0);
 }
 
@@ -234,12 +231,12 @@
   bottom: -5rem;
   left: 50%;
   position: absolute;
-  transform: translate(10%, 40rem);
+  // transform: translate(10%, 40rem);
   width: 60%;
-  transition: transform 0.6s cubic-bezier(0.87, 0, 0.13, 1);
-  will-change: transform;
+  // transition: transform 0.6s cubic-bezier(0.87, 0, 0.13, 1);
+  // will-change: transform;
 
   .mobileMenu.active & {
-    transform: translate(10%, 0);
+    // transform: translate(10%, 0);
   }
 }
