--- a/src/components/Product/ProductGrid/styles.module.scss
+++ b/src/components/Product/ProductGrid/styles.module.scss
@@ -1,12 +1,8 @@
 @import 'src/assets/scss/variables';
+@import 'src/assets/scss/typography';
 
 .gridTitle {
-  color: $color-pink;
-  font-size: 2.5rem;
-  font-family: $font-heading;
-  font-weight: 700;
-  line-height: 1;
-  margin-bottom: 2.1rem;
+  @extend .th_subtitle;
 }
 
 .grid {
