--- a/src/components/Slider/styles.module.scss
+++ b/src/components/Slider/styles.module.scss
@@ -19,8 +19,13 @@
 
 .smallImage {
   border-radius: 1.8rem;
-  border: 4px solid rgba(255, 255, 255, 0);
+  border: 0px solid $color-pink;
+  cursor: pointer;
   line-height: 0;
+  padding: 0;
+  outline: none;
+  overflow: hidden;
+  transition: border 0.2s;
 }
 
 .active {
