--- a/src/assets/scss/reset.scss
+++ b/src/assets/scss/reset.scss
@@ -127,3 +127,10 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+button {
+  background: none;
+  border: none;
+  padding: 0;
+  outline: 0;
+}
