--- a/src/components/Product/ProductOption/styles.module.scss
+++ b/src/components/Product/ProductOption/styles.module.scss
@@ -1,5 +1,9 @@
 @import 'src/assets/scss/variables';
 
+.optionWrapper {
+  margin-bottom: 3rem;
+}
+
 .colorOption {
   display: flex;
 }
@@ -31,4 +35,62 @@
   .active & {
     border: 2px solid $color-pink !important;
   }
+}
+
+.sizeSlider {
+  position: relative;
+  width: 100%;
+}
+
+$handle-size: 20px;
+
+.sizeSliderTrack {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  width: 100%;
+  padding-right: $handle-size / 2;
+}
+
+.sizeDot {
+  border-radius: 50%;
+  background-color: red;
+  height: $handle-size;
+  width: $handle-size;
+}
+
+// .sizeSliderTrack {
+//   position: relative;
+//   width: 100%;
+//   height: 10rem;
+//   top: 5rem;
+// }
+
+// .sizeDot {
+//   border-radius: 50%;
+//   background-color: red;
+//   height: 2rem;
+//   position: absolute;
+//   width: 2rem;
+//   // margin-left: -1rem;
+
+//   &:nth-child(1) {
+//     left: calc(0%);
+//   }
+//   &:nth-child(2) {
+//     left: calc((100% - 2rem) * 0.333);
+//   }
+//   &:nth-child(3) {
+//     left: calc((100% - 2rem) * 0.666);
+//   }
+//   &:nth-child(4) {
+//     left: calc((100% - 2rem) * 1);
+//   }
+// }
+
+.sizeHandle {
+  background-color: blue;
+  height: 3rem;
+  width: 3rem;
+  position: absolute;
 }
