--- a/src/components/Product/ProductOption/styles.module.scss
+++ b/src/components/Product/ProductOption/styles.module.scss
@@ -1,7 +1,7 @@
 @import 'src/assets/scss/variables';
 
 .optionWrapper {
-  margin-bottom: 3rem;
+  margin-bottom: 5rem;
 }
 
 .colorOption {
@@ -37,60 +37,139 @@
   }
 }
 
+.sizeOption {
+  display: flex;
+  align-items: flex-end;
+  padding-left: 1.6rem;
+}
+
 .sizeSlider {
   position: relative;
   width: 100%;
+  margin-right: 2rem;
 }
 
-$handle-size: 20px;
+$dot-size: 22px;
+$handle-size: 50px;
 
 .sizeSliderTrack {
   display: flex;
   justify-content: space-between;
   position: relative;
   width: 100%;
-  padding-right: $handle-size / 2;
+  padding-right: $handle-size - $dot-size;
 }
 
 .sizeDot {
   border-radius: 50%;
-  background-color: red;
-  height: $handle-size;
-  width: $handle-size;
+  box-sizing: border-box;
+  background-color: #ffd6c2;
+  border: 2px solid #eaa27d;
+  cursor: pointer;
+  height: $dot-size;
+  outline: none;
+  width: $dot-size;
 }
 
-// .sizeSliderTrack {
-//   position: relative;
-//   width: 100%;
-//   height: 10rem;
-//   top: 5rem;
-// }
-
-// .sizeDot {
-//   border-radius: 50%;
-//   background-color: red;
-//   height: 2rem;
-//   position: absolute;
-//   width: 2rem;
-//   // margin-left: -1rem;
-
-//   &:nth-child(1) {
-//     left: calc(0%);
-//   }
-//   &:nth-child(2) {
-//     left: calc((100% - 2rem) * 0.333);
-//   }
-//   &:nth-child(3) {
-//     left: calc((100% - 2rem) * 0.666);
-//   }
-//   &:nth-child(4) {
-//     left: calc((100% - 2rem) * 1);
-//   }
-// }
-
 .sizeHandle {
-  background-color: blue;
-  height: 3rem;
-  width: 3rem;
+  cursor: pointer;
+  height: $handle-size;
   position: absolute;
+  width: $handle-size;
+  z-index: 1;
+
+  img {
+    display: block;
+    height: 100%;
+    margin: 0 auto;
+  }
+}
+
+.sizeLine {
+  position: absolute;
+  top: 9px;
+  width: 100%;
+  z-index: 0;
+}
+
+.sizeChipmunk {
+  align-items: flex-end;
+  display: flex;
+  width: 20rem;
+
+  img {
+    bottom: -1.5rem;
+    display: none;
+    transform-origin: bottom;
+    position: relative;
+    width: 100%;
+    z-index: 1;
+
+    &.active {
+      display: block;
+    }
+  }
+}
+
+.sizeInfo {
+  bottom: calc(100% + 2rem);
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+
+  &.first {
+    left: 0;
+    transform: translateX(0);
+  }
+
+  &.last {
+    left: initial;
+    right: 0;
+    transform: translateX(0);
+  }
+}
+
+.bubble {
+  background-color: white;
+  border-radius: 1rem;
+  cursor: default;
+  font-size: 1.6rem;
+  padding: 0.8rem 1.5rem;
+  position: relative;
+  white-space: nowrap;
+
+  strong {
+    font-weight: 700;
+  }
+}
+
+.arrowDown {
+  border-left: 1rem solid transparent;
+  border-right: 1rem solid transparent;
+
+  border-top: 1rem solid white;
+  left: 50%;
+  transform: translateX(-50%);
+  position: absolute;
+  bottom: -0.9rem;
+  height: 0;
+  width: 0;
+
+  .first & {
+    left: 1.5rem;
+    transform: translateX(0);
+  }
+
+  .last & {
+    left: initial;
+    right: 1.5rem;
+    transform: translateX(0);
+  }
+}
+
+.sizingChart {
+  text-align: center;
+  font-size: 1.2rem;
+  padding-bottom: 0.5rem;
+  opacity: 0.6;
 }
