--- a/src/components/Cart/styles.module.scss
+++ b/src/components/Cart/styles.module.scss
@@ -9,7 +9,6 @@
   height: 100%;
   max-width: 50rem;
   overflow: hidden;
-  padding: 2rem 1.5rem;
   position: fixed;
   right: 0;
   top: 0;
@@ -37,6 +36,7 @@
   @extend .th_subtitle;
   font-size: 2rem;
   font-weight: 500;
+  margin-bottom: 0;
   margin-top: 1.2rem;
   text-align: center;
 }
@@ -64,4 +64,11 @@
 .scrollable {
   flex: 1;
   overflow-y: auto;
+  padding: 2rem 1.5rem;
+  -webkit-overflow-scrolling: touch;
+}
+
+.header {
+  box-shadow: 0 2px 20px rgba(0, 0, 0, 0.1);
+  padding: 2rem 1.5rem;
 }
